@@ -1,5 +1,22 @@
-# List of files which contain translatable strings.
+grub-core/boot/decompressor/minilib.c
+grub-core/boot/decompressor/none.c
+grub-core/boot/decompressor/xz.c
+grub-core/bus/bonito.c
+grub-core/bus/cs5536.c
+grub-core/bus/emu/pci.c
+grub-core/bus/pci.c
+grub-core/bus/usb/emu/usb.c
+grub-core/bus/usb/ohci.c
+grub-core/bus/usb/serial/common.c
+grub-core/bus/usb/serial/ftdi.c
+grub-core/bus/usb/serial/pl2303.c
+grub-core/bus/usb/uhci.c
+grub-core/bus/usb/usb.c
+grub-core/bus/usb/usbhub.c
+grub-core/bus/usb/usbtrans.c
 grub-core/commands/acpi.c
+grub-core/commands/acpihalt.c
+grub-core/commands/arc/lsdev.c
 grub-core/commands/blocklist.c
 grub-core/commands/boot.c
 grub-core/commands/cat.c
@@ -7,33 +24,41 @@ grub-core/commands/cmp.c
 grub-core/commands/configfile.c
 grub-core/commands/date.c
 grub-core/commands/echo.c
+grub-core/commands/efi/acpi.c
 grub-core/commands/efi/fixvideo.c
 grub-core/commands/efi/loadbios.c
+grub-core/commands/efi/lsefimmap.c
+grub-core/commands/efi/lsefisystab.c
+grub-core/commands/efi/lssal.c
+grub-core/commands/extcmd.c
 grub-core/commands/gptsync.c
 grub-core/commands/halt.c
 grub-core/commands/hashsum.c
 grub-core/commands/hdparm.c
 grub-core/commands/help.c
 grub-core/commands/hexdump.c
+grub-core/commands/i386/cmostest.c
 grub-core/commands/i386/cpuid.c
+grub-core/commands/i386/pc/acpi.c
 grub-core/commands/i386/pc/drivemap.c
 grub-core/commands/i386/pc/halt.c
 grub-core/commands/i386/pc/lsapm.c
 grub-core/commands/i386/pc/play.c
-grub-core/commands/i386/pc/pxecmd.c
+grub-core/commands/i386/pc/sendkey.c
 grub-core/commands/ieee1275/suspend.c
 grub-core/commands/iorw.c
 grub-core/commands/keylayouts.c
 grub-core/commands/keystatus.c
 grub-core/commands/legacycfg.c
 grub-core/commands/loadenv.c
-grub-core/commands/ls.c
 grub-core/commands/lsacpi.c
+grub-core/commands/ls.c
 grub-core/commands/lsmmap.c
 grub-core/commands/lspci.c
 grub-core/commands/memrw.c
 grub-core/commands/menuentry.c
 grub-core/commands/minicmd.c
+grub-core/commands/mips/loongson/lsspd.c
 grub-core/commands/parttool.c
 grub-core/commands/password.c
 grub-core/commands/password_pbkdf2.c
@@ -51,67 +76,348 @@ grub-core/commands/sleep.c
 grub-core/commands/terminal.c
 grub-core/commands/test.c
 grub-core/commands/testload.c
+grub-core/commands/time.c
 grub-core/commands/true.c
 grub-core/commands/usbtest.c
 grub-core/commands/videoinfo.c
 grub-core/commands/videotest.c
+grub-core/commands/wildcard.c
 grub-core/commands/xnu_uuid.c
-
+grub-core/disk/ahci.c
+grub-core/disk/arc/arcdisk.c
+grub-core/disk/ata.c
+grub-core/disk/dmraid_nvidia.c
+grub-core/disk/efi/efidisk.c
+grub-core/disk/host.c
+grub-core/disk/i386/pc/biosdisk.c
+grub-core/disk/ieee1275/nand.c
+grub-core/disk/ieee1275/ofdisk.c
 grub-core/disk/loopback.c
-
+grub-core/disk/lvm.c
+grub-core/disk/mdraid1x_linux.c
+grub-core/disk/mdraid_linux.c
+grub-core/disk/memdisk.c
+grub-core/disk/pata.c
+grub-core/disk/raid5_recover.c
+grub-core/disk/raid6_recover.c
+grub-core/disk/raid.c
+grub-core/disk/scsi.c
+grub-core/disk/usbms.c
+grub-core/efiemu/i386/coredetect.c
+grub-core/efiemu/i386/loadcore32.c
+grub-core/efiemu/i386/loadcore64.c
+grub-core/efiemu/i386/nocfgtables.c
+grub-core/efiemu/i386/pc/cfgtables.c
+grub-core/efiemu/loadcore32.c
+grub-core/efiemu/loadcore64.c
+grub-core/efiemu/loadcore.c
+grub-core/efiemu/loadcore_common.c
 grub-core/efiemu/main.c
-
+grub-core/efiemu/mm.c
+grub-core/efiemu/pnvram.c
+grub-core/efiemu/prepare32.c
+grub-core/efiemu/prepare64.c
+grub-core/efiemu/prepare.c
+grub-core/efiemu/runtime/efiemu.c
+grub-core/efiemu/symbols.c
+grub-core/font/font.c
 grub-core/font/font_cmd.c
-
+grub-core/fs/affs.c
+grub-core/fs/afs_be.c
+grub-core/fs/afs.c
+grub-core/fs/befs_be.c
+grub-core/fs/befs.c
+grub-core/fs/btrfs.c
+grub-core/fs/cpio.c
+grub-core/fs/ext2.c
+grub-core/fs/fat.c
+grub-core/fs/fshelp.c
+grub-core/fs/hfs.c
+grub-core/fs/hfsplus.c
+grub-core/fs/iso9660.c
+grub-core/fs/jfs.c
+grub-core/fs/minix2.c
+grub-core/fs/minix3.c
+grub-core/fs/minix.c
+grub-core/fs/nilfs2.c
+grub-core/fs/ntfs.c
+grub-core/fs/ntfscomp.c
+grub-core/fs/reiserfs.c
+grub-core/fs/romfs.c
+grub-core/fs/sfs.c
+grub-core/fs/squash4.c
+grub-core/fs/tar.c
+grub-core/fs/udf.c
+grub-core/fs/ufs2.c
+grub-core/fs/ufs.c
+grub-core/fs/xfs.c
+grub-core/fs/zfs/zfs.c
+grub-core/fs/zfs/zfs_fletcher.c
+grub-core/fs/zfs/zfsinfo.c
+grub-core/fs/zfs/zfs_lzjb.c
+grub-core/fs/zfs/zfs_sha256.c
+grub-core/gentrigtables.c
 grub-core/gettext/gettext.c
-
+grub-core/gfxmenu/font.c
+grub-core/gfxmenu/gfxmenu.c
+grub-core/gfxmenu/gui_box.c
+grub-core/gfxmenu/gui_canvas.c
+grub-core/gfxmenu/gui_circular_progress.c
+grub-core/gfxmenu/gui_image.c
+grub-core/gfxmenu/gui_label.c
+grub-core/gfxmenu/gui_list.c
 grub-core/gfxmenu/gui_progress_bar.c
-
+grub-core/gfxmenu/gui_string_util.c
+grub-core/gfxmenu/gui_util.c
+grub-core/gfxmenu/icon_manager.c
+grub-core/gfxmenu/model.c
+grub-core/gfxmenu/theme_loader.c
+grub-core/gfxmenu/view.c
+grub-core/gfxmenu/widget-box.c
 grub-core/hello/hello.c
-
+grub-core/hook/datehook.c
+grub-core/io/bufio.c
+grub-core/io/gzio.c
+grub-core/io/xzio.c
+grub-core/kern/command.c
 grub-core/kern/corecmd.c
+grub-core/kern/device.c
+grub-core/kern/disk.c
+grub-core/kern/dl.c
+grub-core/kern/efi/efi.c
+grub-core/kern/efi/init.c
+grub-core/kern/efi/mm.c
+grub-core/kern/elf.c
+grub-core/kern/emu/cache.c
+grub-core/kern/emu/console.c
+grub-core/kern/emu/full.c
+grub-core/kern/emu/getroot.c
 grub-core/kern/emu/hostdisk.c
+grub-core/kern/emu/hostfs.c
+grub-core/kern/emu/lite.c
+grub-core/kern/emu/main.c
 grub-core/kern/emu/misc.c
+grub-core/kern/emu/mm.c
+grub-core/kern/emu/time.c
+grub-core/kern/env.c
 grub-core/kern/err.c
-
+grub-core/kern/file.c
+grub-core/kern/fs.c
+grub-core/kern/generic/millisleep.c
+grub-core/kern/generic/rtc_get_time_ms.c
+grub-core/kern/i386/coreboot/init.c
+grub-core/kern/i386/coreboot/mmap.c
+grub-core/kern/i386/dl.c
+grub-core/kern/i386/efi/init.c
+grub-core/kern/i386/multiboot_mmap.c
+grub-core/kern/i386/pc/init.c
+grub-core/kern/i386/pc/mmap.c
+grub-core/kern/i386/pit.c
+grub-core/kern/i386/qemu/mmap.c
+grub-core/kern/i386/tsc.c
+grub-core/kern/ia64/dl.c
+grub-core/kern/ia64/dl_helper.c
+grub-core/kern/ia64/efi/init.c
+grub-core/kern/ieee1275/cmain.c
+grub-core/kern/ieee1275/ieee1275.c
+grub-core/kern/ieee1275/init.c
+grub-core/kern/ieee1275/mmap.c
+grub-core/kern/ieee1275/openfw.c
+grub-core/kern/list.c
+grub-core/kern/main.c
+grub-core/kern/mips/arc/init.c
+grub-core/kern/mips/dl.c
+grub-core/kern/mips/init.c
+grub-core/kern/mips/loongson/init.c
+grub-core/kern/mips/qemu_mips/init.c
+grub-core/kern/misc.c
+grub-core/kern/mm.c
+grub-core/kern/parser.c
+grub-core/kern/partition.c
+grub-core/kern/powerpc/dl.c
+grub-core/kern/rescue_parser.c
+grub-core/kern/rescue_reader.c
+grub-core/kern/sparc64/dl.c
+grub-core/kern/sparc64/ieee1275/ieee1275.c
+grub-core/kern/term.c
+grub-core/kern/time.c
+grub-core/kern/vga_init.c
+grub-core/kern/x86_64/dl.c
+grub-core/lib/arc/datetime.c
 grub-core/lib/arg.c
-
+grub-core/lib/cmdline.c
+grub-core/lib/cmos_datetime.c
+grub-core/lib/crc.c
+grub-core/lib/crypto.c
+grub-core/lib/efi/datetime.c
+grub-core/lib/efi/halt.c
+grub-core/lib/efi/relocator.c
+grub-core/lib/emu/halt.c
+grub-core/lib/envblk.c
+grub-core/lib/hexdump.c
+grub-core/lib/i386/halt.c
+grub-core/lib/i386/pc/biosnum.c
+grub-core/lib/i386/pc/vesa_modes_table.c
+grub-core/lib/i386/relocator.c
+grub-core/lib/ieee1275/cmos.c
+grub-core/lib/ieee1275/datetime.c
+grub-core/lib/ieee1275/halt.c
+grub-core/lib/ieee1275/relocator.c
+grub-core/lib/legacy_parse.c
+grub-core/lib/LzFind.c
+grub-core/lib/LzmaDec.c
+grub-core/lib/LzmaEnc.c
+grub-core/lib/mips/relocator.c
+grub-core/lib/pbkdf2.c
+grub-core/lib/powerpc/relocator.c
+grub-core/lib/reed_solomon.c
+grub-core/lib/relocator.c
+grub-core/lib/xzembed/xz_dec_bcj.c
+grub-core/lib/xzembed/xz_dec_lzma2.c
+grub-core/lib/xzembed/xz_dec_stream.c
+grub-core/loader/aout.c
 grub-core/loader/efi/appleloader.c
 grub-core/loader/efi/chainloader.c
+grub-core/loader/i386/bsd32.c
+grub-core/loader/i386/bsd64.c
 grub-core/loader/i386/bsd.c
+grub-core/loader/i386/bsd_pagetable.c
+grub-core/loader/i386/bsdXX.c
+grub-core/loader/i386/coreboot/chainloader.c
 grub-core/loader/i386/linux.c
+grub-core/loader/i386/multiboot_mbi.c
 grub-core/loader/i386/pc/chainloader.c
+grub-core/loader/i386/pc/freedos.c
 grub-core/loader/i386/pc/linux.c
 grub-core/loader/i386/pc/ntldr.c
 grub-core/loader/i386/xnu.c
+grub-core/loader/ia64/efi/linux.c
+grub-core/loader/macho32.c
+grub-core/loader/macho64.c
+grub-core/loader/macho.c
+grub-core/loader/machoXX.c
 grub-core/loader/mips/linux.c
 grub-core/loader/multiboot.c
+grub-core/loader/multiboot_elfxx.c
+grub-core/loader/multiboot_mbi2.c
 grub-core/loader/powerpc/ieee1275/linux.c
 grub-core/loader/sparc64/ieee1275/linux.c
 grub-core/loader/xnu.c
-
+grub-core/loader/xnu_resume.c
+grub-core/mmap/efi/mmap.c
+grub-core/mmap/i386/mmap.c
+grub-core/mmap/i386/pc/mmap.c
+grub-core/mmap/i386/uppermem.c
+grub-core/mmap/mips/uppermem.c
 grub-core/mmap/mmap.c
-
+grub-core/net/arp.c
+grub-core/net/bootp.c
+grub-core/net/drivers/efi/efinet.c
+grub-core/net/drivers/emu/emunet.c
+grub-core/net/drivers/i386/pc/pxe.c
+grub-core/net/drivers/ieee1275/ofnet.c
+grub-core/net/ethernet.c
+grub-core/net/ip.c
+grub-core/net/netbuff.c
+grub-core/net/net.c
+grub-core/net/tftp.c
+grub-core/net/udp.c
 grub-core/normal/auth.c
+grub-core/normal/autofs.c
+grub-core/normal/charset.c
 grub-core/normal/cmdline.c
 grub-core/normal/color.c
+grub-core/normal/completion.c
 grub-core/normal/context.c
+grub-core/normal/crypto.c
+grub-core/normal/datetime.c
 grub-core/normal/dyncmd.c
 grub-core/normal/main.c
 grub-core/normal/menu.c
 grub-core/normal/menu_entry.c
 grub-core/normal/menu_text.c
 grub-core/normal/misc.c
-
+grub-core/normal/term.c
+grub-core/partmap/acorn.c
+grub-core/partmap/amiga.c
+grub-core/partmap/apple.c
+grub-core/partmap/bsdlabel.c
+grub-core/partmap/dvh.c
+grub-core/partmap/gpt.c
+grub-core/partmap/msdos.c
+grub-core/partmap/sun.c
+grub-core/partmap/sunpc.c
+grub-core/parttool/msdospart.c
+grub-core/script/argv.c
+grub-core/script/execute.c
+grub-core/script/function.c
+grub-core/script/lexer.c
 grub-core/script/main.c
-
+grub-core/script/script.c
+grub-core/term/arc/console.c
+grub-core/term/at_keyboard.c
+grub-core/term/efi/console.c
 grub-core/term/gfxterm.c
+grub-core/term/i386/pc/console.c
+grub-core/term/i386/pc/vga_text.c
+grub-core/term/i386/vga_common.c
+grub-core/term/ieee1275/ofconsole.c
+grub-core/term/ns8250.c
 grub-core/term/serial.c
 grub-core/term/terminfo.c
-
+grub-core/term/tparm.c
+grub-core/term/usb_keyboard.c
+grub-core/tests/example_functional_test.c
+grub-core/tests/lib/functional_test.c
+grub-core/tests/lib/test.c
 grub-core/tests/test_blockarg.c
-
+grub-core/video/bitmap.c
+grub-core/video/bitmap_scale.c
+grub-core/video/bochs.c
+grub-core/video/cirrus.c
+grub-core/video/colors.c
+grub-core/video/efi_gop.c
+grub-core/video/efi_uga.c
+grub-core/video/emu/sdl.c
+grub-core/video/fb/fbblit.c
+grub-core/video/fb/fbfill.c
+grub-core/video/fb/fbutil.c
+grub-core/video/fb/video_fb.c
+grub-core/video/i386/pc/vbe.c
+grub-core/video/i386/pc/vga.c
+grub-core/video/ieee1275.c
+grub-core/video/readers/jpeg.c
+grub-core/video/readers/png.c
+grub-core/video/readers/tga.c
+grub-core/video/sis315_init.c
+grub-core/video/sis315pro.c
+grub-core/video/sm712.c
+grub-core/video/sm712_init.c
+grub-core/video/video.c
+tests/example_unit_test.c
+tests/lib/unit_test.c
+util/bin2h.c
+util/deviceiter.c
+util/devicemap.c
 util/grub-editenv.c
 util/grub-fstest.c
+util/grub-macho2img.c
+util/grub-menulst2cfg.c
+util/grub-mkdevicemap.c
+util/grub-mkfont.c
 util/grub-mkimage.c
+util/grub-mkimagexx.c
+util/grub-mklayout.c
+util/grub-mkpasswd-pbkdf2.c
+util/grub-mkrelpath.c
+util/grub-pe2elf.c
+util/grub-probe.c
+util/grub-script-check.c
 util/grub-setup.c
+util/ieee1275/devicemap.c
+util/ieee1275/grub-ofpathname.c
+util/ieee1275/ofpath.c
+util/lvm.c
+util/misc.c
+util/raid.c
+util/resolve.c
